--- a/style.css
+++ b/style.css
@@ -349,7 +349,7 @@ header{
     }
 
     .ready{
-        width: 315px;
+        width: 90%;
         height: auto;
         border: white;
         border-radius: 8px;
